# hacka-py

./: .gitignore  BOARD.md  LICENCE.md  README.md  connect-shell  play  play-421.py  play-risky.py  playerUltimateFirstAI.py  pyproject.toml
correction/: myPy421QLearner.py
doc/: hacka-01-install.md  hacka-02-protocol.md  imt.css  index.html  index.md  install-win.md  test.html  toc.md  tuto-IA-01-qlearning.md  tuto-client-server.md  tuto-decma-converging.md  tuto-decma-qlearning.md  tuto-engine-gamecreation-python.md  tuto-game-421.md  tuto-game-creation-python.md  tuto-game-py421.md  tuto-game-risky.md  tuto-game-tictactoe.md  tuto-initai-agent.md  tuto-initai-rl.md  tuto-mosquitto.md  tuto-replit.md  tuto-ros2.md  tuto-zemq.md  webpages-toc.md
example/: play-cairo.py  play-streamlit.py
game-421/: README.md  dpd  firstAI.py  game421.py  hackagames  local  player421.py  start.py  statGame.py
game-risky/: CMakeLists.txt  README.md  confront.py  local  play  simplePlayer.py  start  terminalIHM.py
game-risky/gameEngine/: risky.py  viewer.py
game-risky/ressources/: map-board-4.gml  map-board-4.txt  map-board-9.gml  map-board-9.txt
game-risky/src/: main-hidden.c  main-risky.c  risky.c  risky.h
game-risky/test/: test_01_gameEngine.py
game-tictactoe/: README.md  classicFirstAI.py  play  standardFirstAI.py  start  terminalIHM.py  ultimateFirstAI.py
game421/: README.md  firstAI.py  local  start  start-interactive  start-local  start-server
gameCircEco/: README.md
gameConnect4/: README.md  playerFirstAI.py  start-interactive  start-server
gameFlows/: README.md
gameGoods/: README.md
gameMove/: README.md
gameMoveIt/: README.md  playerFirstAI.py  playerInteractive.py  start-interactive  start-server.py
gamePy421/: player-firstAI  playerFirstAI.py  start-interactive  start-server
gameRisky/: firstAI.py  local  play  player-firstAI  player-interactive  playerFirstAI.py  playerInteractive.py  start-interactive  start-local  start-server  terminalIHM.py
gameTictactoe/: README.md  classicFirstAI.py  local  play  playerClassicFirstAI.py  playerFirstAI.py  playerInteractive.py  start  start-interactive  start-server  terminalIHM.py  ultimateFirstAI.py
hackagames/: CMakeLists.txt  __init__.py  abstract.py  game.py
hackagames/src/: dependancy.h  hackagames-geometry.h  hackagames-interface.h  hackagames.h  hg-game.c  hg-geometry.c  hg-interface.c  hg-organism.c  main-draft.c  main-play.c  main-term.c
hackapy/: __init__.py  abstract.py  board.py  client.py  cmd.py  command.py  component.py  element.py  engine.py  game.py  interprocess.py  pieceOfData.py  player.py  pod.py  test_01_element.py
play/: connect-shell  connect4.py  moveIt.py  py421  py421.py  risky.py  start-echo.py  tictactoe.py
resources/: logo-brut.xcf
serve/: connect4.py  moveIt.py  py421  py421.py  risky.py  tictactoe.py
test/: test_01_pieceOfData.py  test_02_board.py  test_03_interprocess.py  (+5 more)
(+219 files in other folders)
